<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hayk.gametime.fragments.BombSecondFragment"
    android:background="@drawable/background7"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_margin="4dp"
        android:text="@string/choose_work"
        android:id="@+id/work_text"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/bomb_gif4"
            android:layout_gravity="center"
            android:id="@+id/bomb_image"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="37sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/text_for_end_bomb"
            android:visibility="gone"
            android:id="@+id/text_for_looser"
            />
    </FrameLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textSize="23sp"
        android:textColor="@android:color/black"
        android:gravity="center"
        android:layout_margin="4dp"
        android:text="@string/place_for_question"
        android:id="@+id/text_for_question"
        />


</LinearLayout>
