<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hayk.gametime.fragments.RadioOptionsFragment"
    android:orientation="vertical"
    android:background="@drawable/background7">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="italic"
        android:textSize="25sp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:text="Միավորներ"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:gravity="center"
        android:text="@string/how_much_points"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:layout_marginLeft="40dp"
            android:scaleType="fitEnd"
            android:src="@mipmap/number_up"
            android:id="@+id/points_plus"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/square_frame"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:gravity="center"
                android:text="40"
                android:id="@+id/points_number"/>
        </FrameLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:layout_marginRight="40dp"
            android:scaleType="fitStart"
            android:src="@mipmap/number_down"
            android:id="@+id/points_minus"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textSize="25sp"
        android:gravity="center"
        android:text="------------------------------------"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textStyle="italic"
        android:textSize="25sp"
        android:gravity="center"
        android:text="Ժամանակ"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textStyle="italic"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:gravity="center"
        android:text="@string/how_long_time" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:layout_marginLeft="40dp"
            android:scaleType="fitEnd"
            android:src="@mipmap/number_up"
            android:id="@+id/time_plus"/>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@mipmap/square_frame"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:gravity="center"
                android:text="60"
                android:id="@+id/time_number"/>
        </FrameLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:layout_marginRight="40dp"
            android:scaleType="fitStart"
            android:src="@mipmap/number_down"
            android:id="@+id/time_minus"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@mipmap/back_icon"
            android:id="@+id/back_to_teames"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:text="@string/are_you_ready"/>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="10dp"
            android:src="@mipmap/check_icon"
            android:id="@+id/play_radio_game"/>
    </LinearLayout>

</LinearLayout>
